# ResearchAssistant

./: ARCHITECTURE.md  README.md  WORKFLOW_GUIDE.md  pyproject.toml  test_dba_workflow.py  test_email_response.py
src/logs/: workflow_history.jsonl
src/research_assistant/: __init__.py  cli.py  config.py
src/research_assistant/agents/: __init__.py  analyst.py  base.py  learner.py  reader.py  reviewer.py
src/research_assistant/core/: __init__.py  contextguard.py  controller.py  llm.py  memory.py  thinking.py
src/research_assistant/personas/: __init__.py  loader.py
src/research_assistant/personas/QNTR/: persona.yaml  prompts.yaml
src/research_assistant/personas/QNTR/knowledge/: Prof Atul Prashar_ClassNotes.docx
src/research_assistant/personas/QNTR/output/: explain_20260125_182722.md  explain_20260125_183143.md  explain_20260125_183556.md  explain_20260125_200444.md  explain_20260125_201032.md  explain_20260125_233443.md  explain_20260125_233642.md  explain_20260125_234300.md  explain_20260126_135059.md  (+1 more)
src/research_assistant/prompts/: ARCHITECTURE.md  analyst.md  implementer.md  learner.md  reviewer.md  thinker.md
src/research_assistant/spaces/: __init__.py  loader.py
src/research_assistant/spaces/CW/: persona_CW.yaml  prompts_CW.yaml
src/research_assistant/spaces/DBA/: persona_DBA.yaml  prompts_DBA.yaml
src/research_assistant/spaces/QNTR/: prompts_QNTR.yaml
src/research_assistant/workflows/: __init__.py  invoker.py
tests/: __init__.py  test_eml_email.py  test_image_vision.py  test_llm.py  test_path_extraction.py  test_workflow_mismatch.py
(+77 files in other folders)
